--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/serve": "^2.10.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.32.1",
     "isbot": "^4.4.0",
     "lucide-react": "^0.416.0",
