--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "remix-auth": "^3.7.0",
     "remix-auth-google": "^2.0.0",
     "remix-themes": "^1.5.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
