--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "drizzle-orm": "^0.32.1",
     "isbot": "^4.4.0",
     "lucide-react": "^0.416.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
@@ -42,12 +43,15 @@
     "remix-themes": "^1.5.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.16.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.8",
     "@remix-run/dev": "^2.10.3",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
@@ -66,7 +70,6 @@
     "postcss": "^8.4.40",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.7",
-    "tsx": "^4.16.3",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
     "vite-tsconfig-paths": "^4.3.2"
